--- a/styles/globals.css
+++ b/styles/globals.css
@@ -173,10 +173,7 @@
     right: 1rem;
     text-align: right;
 }
-.attribution a
-{
-	text-decoration: none;
-}
+
 
 @media only screen and (max-width: 1000px)
 {
@@ -205,11 +202,138 @@
 		margin: 2rem;
 		margin-bottom: 5rem;
 	}
-	.attribution
-	{
-		position: relative;
-	}
+	
 }
+
+
+
+#card1  {
+  background-image: url('https://www.imaginenation.com.au/wp-content/uploads/2017/04/Blog-Image-18.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 90%;
+}
+
+#card2 {
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRptxcm1qESsRmuI20uAtxzUikdaaLr5918Zw&usqp=CAU');
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 90%;
+}
+#card3{
+  background-image: url('https://images.unsplash.com/photo-1496115965489-21be7e6e59a0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80');
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 90%;
+}
+#card4 {
+  background-image: url('https://slatesafety.com/wp-content/uploads/2022/08/downtown-atlanta-smaller.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 90%;
+}
+
+
+
+.testimotionals {
+  width:350px;
+   display:inline-block;
+    margin-left:50px;
+    margin-top:50px
+    
+  }
+  
+  
+  .testimotionals .card {
+    
+    position:relative;
+    overflow:hidden;
+    width:300px;
+    background:rgb(240, 92, 92);
+    padding:20px;
+    box-sizing:border-box;
+    text-align:center;
+    border-radius: 5px;
+    box-shadow:0 10px 40px rgba(0,0,0,.5)
+  }
+  .testimotionals .card .layer {
+    z-index:1;
+    position:absolute;
+    top:calc(100% - 2px);
+    height:100%;
+    width:100%;
+    left:0;
+    background-color: #000;
+    color: #fff;
+    opacity: .5;
+
+    transition:0.5s;
+    
+  }
+  
+  .testimotionals .card .content {
+    z-index:2; 
+    position:relative;
+  }
+  
+  .testimotionals .card:hover  .layer{
+    top:0;
+  }
+  
+  .testimotionals .card .content p {
+    font-size:14px;
+    line-height:24px;
+    color:#fff;
+    
+  }
+  .testimotionals .card .content .image {
+    width:100px; height:100px;
+    margin:0 auto;
+    border-radius:50%;
+    overflow:hidden;
+    border: 4px solid white;
+    box-shadow: 0 10px 40px rgba(0,0,0,0.5);
+    
+  }
+  
+  .testimotionals .card .conte nt .details h2 {
+  font-size:18px;
+  color:white;
+  }
+  .testimotionals .card .content .details h2 span {
+  font-size:18px;
+  color:white;
+    transition:0.5s;
+  }
+  .testimotionals .card:hover .content .details h2 span {
+    color:white;
+    position:relative
+  }
+  
+
+@-webkit-keyframes check {
+  50% {
+    outline-color: #333;
+    box-shadow: 0 0 0 12px #333, 0 0 0 36px rgba(51, 51, 51, 0.2);
+  }
+  100% {
+    outline-color: #333;
+    box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
+  }
+}
+
+@keyframes check {
+  50% {
+    outline-color: #333;
+    box-shadow: 0 0 0 12px #333, 0 0 0 36px rgba(51, 51, 51, 0.2);
+  }
+  100% {
+    outline-color: #333;
+    box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
+  }
+}
+
+
 
 
 
