--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,7 +45,7 @@
 .outerdiv {
   width: 100%;
   min-height: 100vh;
-  
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -403,7 +403,7 @@ body {
 }
 
 .custom-img {
-  background-image: url('https://img.freepik.com/premium-vector/mobile-app-development-background_73903-295.jpg?w=2000')
+  background-image: url('https://www.crmopharmmatecch.com/images/project-management-banner.jpg')
 }
 
 a {
