--- a/styles/globals.css
+++ b/styles/globals.css
@@ -341,7 +341,11 @@ height: 900px
   background-repeat: no-repeat;
   height: 700px
 }
-
+/* get all project */
+#height{
+  height: 900px;
+  
+}
 /* article card */
 .containerCard {
 	position: relative;
