--- a/styles/globals.css
+++ b/styles/globals.css
@@ -330,13 +330,13 @@ background-repeat: no-repeat;
 height: 700px;
 }
 .featuresBg{
-  background-image: url(https://c4.wallpaperflare.com/wallpaper/63/375/698/sky-blue-blur-gradation-wallpaper-preview.jpg);
+  background-image: url(https://rare-gallery.com/thumbs/993011-sky-gradient-clear-sky-cyan-cyan-background.png);
   background-size: cover;
 background-repeat: no-repeat;
 height: 900px
 }
 #details{
-  background-image: url(https://papers.co/wallpaper/papers.co-sn66-clear-sky-blue-blur-gradation-36-3840x2400-4k-wallpaper.jpg);
+  background-image: url(https://st.depositphotos.com/65154472/61324/i/450/depositphotos_613249812-stock-photo-gradient-blue-color-abstract-pastel.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   height: 700px
