--- a/styles/globals.css
+++ b/styles/globals.css
@@ -549,8 +549,8 @@ a {
   height: 100px; */
 }
 
-.buttonColor:hover {
+/* .buttonColor:hover {
   background: linear-gradient(90deg, #60efff, #0061ff);
   border-color: white;
   color: black;
-}
+} */
