--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,199 +41,97 @@
 }
 
 
-
-.outerdiv {
+/* testimonial */
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400);
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
+figure.snip1390 {
+  font-family: 'Roboto', Arial, sans-serif;
+  position: relative;
+  overflow: hidden;
+  margin: 10px;
+  min-width: 230px;
+  max-width: 315px;
   width: 100%;
-  min-height: 100vh;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  color: #000000;
+  text-align: center;
+  font-size: 16px;
+  background-color: #0F52BA;
+  padding: 30px;
+  background-image: linear-gradient(-25deg, rgba(0, 0, 0, 0.2) 0%, rgba(255, 255, 255, 0.1) 100%);
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
-
-.innerdiv {
-  transform: scale(0.9);
-  margin: 1rem;
-  display: grid;
-  grid-gap: 1.5rem;
-  grid-template-rows: repeat(2, 22rem);
-  grid-template-columns: repeat(4, 17rem);
+figure.snip1390 *,
+figure.snip1390 *:before,
+figure.snip1390 *:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
 }
-
-.eachdiv {
-  padding: 1rem 2rem;
-  border-radius: 0.8rem;
-  box-shadow: 5px 5px 20px #6d6b6b6b;
-  color: white;
+figure.snip1390 figcaption {
+  width: 100%;
 }
-
-.div1 {
-  background: #3a3d3f;
-  grid-column: 1/3;
-  grid-row: 1/2;
-
-}
-
-.div2 {
-  background: #49556B;
-  grid-column: 3/4;
-  grid-row: 1/2;
-}
-
-.div3 {
-  background: white;
-  grid-column: 4/5;
-  grid-row: 1/3;
-  color: black;
-}
-
-.div4 {
-  background: white;
-  grid-column: 1/2;
-  grid-row: 2/3;
-  color: black;
-}
-
-.div5 {
-  background: #18202D;
-  grid-column: 2/4;
-  grid-row: 2/3;
-}
-
-.userdetails {
-  display: flex;
-}
-
-.imgbox {
-  margin-right: 1rem;
-}
-
-.imgbox img {
-  border-radius: 50%;
-  width: 2rem;
-  border: 2px solid #cec5c5;
-}
-
-.detbox {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.detbox p {
+figure.snip1390 h2,
+figure.snip1390 h4,
+figure.snip1390 blockquote {
   margin: 0;
 }
-
-.detbox .name {
-  color: hsl(0, 0%, 81%);
-  font-size: 0.9rem;
-  margin-bottom: 0.1rem;
-  font-weight: 600;
+figure.snip1390 h2,
+figure.snip1390 h4 {
+  font-weight: 300;
+}
+figure.snip1390 h2 {
+  color: #ffffff;
+}
+figure.snip1390 h4 {
+  color: #a6a6a6;
+}
+figure.snip1390 blockquote {
+  font-size: 1em;
+  padding: 45px 20px 40px 50px;
+  margin-top: 30px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  box-shadow: inset -1.4px -1.4px 2px rgba(0, 0, 0, 0.3);
+  text-align: left;
+  position: relative;
+}
+figure.snip1390 blockquote:before {
+  font-family: 'FontAwesome';
+  content: "\201C";
+  position: absolute;
+  font-size: 70px;
+  opacity: 0.25;
+  font-style: normal;
+  top: 0px;
+  left: 20px;
+}
+figure.snip1390 .profile {
+  width: 100px;
+  border-radius: 50%;
+  display: inline-block;
+  box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.4);
+  margin-bottom: 10px;
+  border: solid 5px #A6A57A;
 }
 
-.detbox .name.dark {
-  color: #49505A;
-}
-
-.detbox .designation {
-  color: hsl(0, 0%, 81%);
-  opacity: 50%;
-  font-size: 0.8rem;
-}
-
-.detbox .designation.dark {
-  color: #49505A;
-}
-
-.review h4 {
-  font-size: 1.4rem;
-  color: #F3DEFF;
-  font-weight: 600;
-  line-height: 1.5;
-  margin-bottom: 0.8rem;
-}
-
-.review.dark h4 {
-  color: #4B5258;
-}
-
-.review p {
-  font-size: 0.95rem;
-  color: #F3DEFF;
-  font-weight: 500;
-  opacity: 50%;
-  line-height: 1.5;
-}
-
-.review.dark p {
-  color: #0e0e0e;
-}
-
-.attribution {
-  font-size: 1rem;
-  line-height: 1.5;
-  position: fixed;
-  bottom: 1rem;
-  right: 1rem;
-  text-align: right;
-}
-
-
-@media only screen and (max-width: 1000px) {
-  .innerdiv {
-    transform: scale(0.7);
-  }
-}
-
-@media only screen and (max-width: 800px) {
-  .innerdiv {
-    transform: scale(0.6);
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .div1 {
-    background-position-x: 10rem;
-  }
-
-  .innerdiv {
-    display: flex;
-    flex-direction: column;
-    transform: scale(1);
-    margin: 2rem;
-    margin-bottom: 5rem;
-  }
-
-}
-
-
-
+/* Features card home */
 #card1 {
-  /* background-image: url('https://media.tenor.com/lWr5DQFVcskAAAAd/features.gif'); */
   background-color:#0F52BA;
-  background-size: cover;
-  background-repeat: no-repeat;
-  opacity: 90%;
 }
 
 #card2 {
-  /* background-image: url('https://digitalscholar.in/wp-content/uploads/2022/12/it-and-software-companies-in-delhi.gif'); */
-  background-color:#0F52BA;
-  background-size: cover;
-  background-repeat: no-repeat;
-  opacity: 90%;
+
+background-color:#0F52BA;
+ 
 }
 
 #card3 {
-  /* background-image: url('https://cdn.dribbble.com/users/2898/screenshots/4655773/resource-identity.gif'); */
+ 
   background-color:#0F52BA;
-  background-size: cover;
-  background-repeat: no-repeat;
-  opacity: 90%;
+
 }
-
-
-
 
 .testimotionals {
   width: 350px;
@@ -314,12 +212,16 @@
   position: relative
 }
 
+/* contact form */
 #contactBg {
   background-image: url('https://www.tatapower.com/images/contact_banner_laptop.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   opacity: 90%;
+ 
 }
+
+/* blog background */
 
 #blogBg {
   background-image: url(https://images.pexels.com/photos/442574/pexels-photo-442574.jpeg?cs=srgb&dl=pexels-jeshootscom-442574.jpg&fm=jpg);
@@ -357,15 +259,17 @@
   align-items: center;
   flex-wrap: wrap;
   margin: 40px 0;
+ 
 }
 
 .containerCard .cardArticle {
   position: relative;
   width: 300px;
   height: 400px;
-  background: rgba(255, 255, 255, 0.05);
+  background: rgba(232, 139, 139, 0.05);
+  background-color: #67a2fa;
   margin: 20px;
-  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 15px 35px rgba(255, 253, 253, 0.5);
   border-radius: 15px;
   display: flex;
   justify-content: center;
@@ -403,7 +307,7 @@
 }
 
 .containerCard .cardArticle .content .contentBx h3 {
-  color: black;
+  color: rgb(255, 255, 255);
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 500;
@@ -439,7 +343,7 @@
 }
 
 .containerCard .cardArticle.sci li p {
-  color: black;
+  color: rgb(255, 249, 249);
   font-size: 20px;
 }
 
